# jzmq

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Changelog.md  Dockerfile  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  jzmq.spec  maven.readme  nativejar.xml  pom.xml
builds/msvc/: msvc.sln
builds/msvc/jzmq/: jzmq.vcproj  jzmq.vcxproj
builds/msvc/local_lat/: local_lat.vcxproj
config/: ax_jni_include_dir.m4  ltmain.sh
debian/: changelog  control  rules
javadocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
javadocs/org/zeromq/: App.html  EmbeddedLibraryTools.html  ZContext.html  ZDispatcher.ZMessageHandler.html  ZDispatcher.ZSender.html  ZDispatcher.html  ZFrame.html  ZLoop.IZLoopHandler.html  ZLoop.html  ZMQ.Context.html  ZMQ.Error.html  ZMQ.PollItem.html  ZMQ.Poller.html  ZMQ.Socket.html  ZMQ.html  ZMQException.html  ZMQForwarder.html  ZMQQueue.html  ZMQStreamer.html  ZMsg.html  ZThread.IAttachedRunnable.html  ZThread.IDetachedRunnable.html  ZThread.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
javadocs/org/zeromq/class-use/: App.html  EmbeddedLibraryTools.html  ZContext.html  ZDispatcher.ZMessageHandler.html  ZDispatcher.ZSender.html  ZDispatcher.html  ZFrame.html  ZLoop.IZLoopHandler.html  ZLoop.html  ZMQ.Context.html  ZMQ.Error.html  ZMQ.PollItem.html  ZMQ.Poller.html  ZMQ.Socket.html  ZMQ.html  ZMQException.html  ZMQForwarder.html  ZMQQueue.html  ZMQStreamer.html  ZMsg.html  ZThread.IAttachedRunnable.html  ZThread.IDetachedRunnable.html  ZThread.html
jzmq/: pom.xml
jzmq-core/: pom.xml
jzmq-core/src/main/java/org/zeromq/: Utils.java  ZAuth.java  ZCert.java  ZCertStore.java  ZConfig.java  ZContext.java  ZLoop.java  ZMsg.java
jzmq-core/src/test/java/org/zeromq/: TestUtils.java  ZAuthTest.java  ZCertStoreTest.java  ZConfigTest.java  ZContextTest.java
jzmq-devices/: pom.xml
jzmq-devices/src/main/java/org/zeromq/: ZMQStreamer.java
jzmq-jni/: AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Makefile.am  autogen.sh  configure.in  pom.xml
jzmq-jni/builds/msvc/: msvc.sln
jzmq-jni/builds/msvc/jzmq/: jzmq.vcproj  jzmq.vcxproj
jzmq-jni/builds/msvc/local_thr/: local_thr.vcxproj
jzmq-jni/builds/msvc/remote_lat/: remote_lat.vcxproj
jzmq-jni/builds/msvc/remote_thr/: remote_thr.vcxproj
jzmq-jni/debian/: changelog  control
jzmq-jni/src/main/c++/: Curve.cpp  Makefile.am  Socket.cpp  ZMQ.cpp  jzmq.hpp  util.cpp
jzmq-jni/src/main/java/org/zeromq/: EmbeddedLibraryTools.java  ZAuth.java  ZMQ.java
jzmq-jni/src/main/perf/: Makefile.am
jzmq-jni/src/test/java/org/zeromq/: EmbeddedLibraryToolsTest.java  ZMQTest.java  ZMsgTest.java
perf/: Makefile.am  Makefile.in  local_lat.java  local_thr.java  remote_lat.java  remote_thr.java
src/: Context.cpp  Makefile.am  Makefile.in  Poller.cpp  Socket.cpp  ZMQ.cpp  config.hpp.in  org_zeromq_ZMQ_Socket.h  util.cpp
src/main/c++/: Context.cpp  Curve.cpp  Event.cpp  Makefile.am  Poller.cpp  Socket.cpp  ZMQ.cpp  jzmq.hpp  util.hpp
src/main/java/org/zeromq/: App.java  EmbeddedLibraryTools.java  ZAuth.java  ZCurveKeyPair.java  ZFrame.java  ZMQ.java  ZMQException.java  ZMQForwarder.java  ZMQQueue.java  ZMQStreamer.java  ZMsg.java
src/main/perf/: Makefile.am
src/org/zeromq/: App.java  EmbeddedLibraryTools.java  ZAuth.java  ZContext.java  ZDispatcher.java  ZFrame.java  ZLoop.java  ZMQ.java  ZMQException.java  ZMQForwarder.java  ZMQQueue.java  ZMQStreamer.java  ZMsg.java  ZThread.java
src/org/zmq/: Context.java  Socket.java
src/test/java/org/zeromq/: ZAuth.java  ZContextTest.java  ZCurveTest.java  ZFrameTest.java  ZMQTest.java  ZMsgTest.java
test/src/org/zeromq/: ZContextTest.java  ZDispatcherTest.java  ZFrameTest.java  ZLoopTest.java  ZMQForwarderTest.java  ZMQQueueTest.java  ZMQTest.java  ZMsgTest.java  ZThreadTest.java
